# xatmcorr

./: CMakeLists.txt  FindGDAL.cmake  ProjectHome.md  Screenshots.md
i.atcorr/: 6s.cpp  CMakeLists.txt  GeomCond.cpp  Iwave.cpp
i.atcorr/grass/: glocale.h
include/: AtmCorr.h  auxtable.h  batchcor.h  dntotoa.h  sensorparam.h
resources/: resources.rc  resources.res
src/: AtmCorr.cpp  auxtable.cpp  batchcor.cpp  dntotoa.cpp  main.cpp  main.cpp~  sensorparam.cpp
trunk/: CMakeLists.txt
trunk/6S/: 6S_atms_Corr.for
trunk/i.atcorr/: AerosolModel.cpp  AtmosModel.cpp  Transform.cpp  gdal6s.cpp
trunk/i.atcorr/grass/: gis.h
trunk/include/: auxtable.h  batchcor.h  dntotoa.h  sensorparam.h  sensorparam.h~  stl.h
trunk/src/: auxtable.cpp  batchcor.cpp  dntotoa.cpp  main.cpp  sensorparam.cpp  stl.cpp
trunk/ui/: batchDialog.ui
ui/: batchDialog.ui
wiki/: Screenshots.wiki
